@@ -36,6 +36,9 @@ RELEASE NOTES
     Corrected a bug in the runtime error handler for top-level message sending
     calls where the reported exception term context argument would be unbound.
 
+    Corrected a bug in the compilation of user multifile directives and user
+    multifile predicates within objects and categories.
+
     Added a monitor/1 predicate to the library event registry objects.
     Updated the definition of the monitors/1 and monitored/1 predicates
     in order to avoid using the non-standard predicate sort/2.
